--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -6,13 +6,13 @@
 #    By: aboumall <aboumall42@gmail.com>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/25 16:29:40 by aboumall          #+#    #+#              #
-#    Updated: 2025/06/28 18:41:23 by aboumall         ###   ########.fr        #
+#    Updated: 2025/06/29 01:42:18 by aboumall         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME 	= philo
+NAME 	= philo_bonus
 
-HEAD 	= includes/philo.h
+HEAD 	= includes/philo_bonus.h
 
 CC 		= cc
 
@@ -21,7 +21,8 @@ CFLAGS 	= -Werror -Wextra -Wall -Iincludes -std=gnu11 -g
 SRC_DIR 	= 	src
 OBJ_DIR 	= 	obj
 
-SRC_SRC 	= 	ft_time.c game.c game_utils.c philo.c philo_utils.c utils.c main.c
+SRC_SRC 	= 	ft_time_bonus.c game_bonus.c game_utils_bonus.c philo_bonus.c \
+				philo_utils_bonus.c utils_bonus.c main_bonus.c
 
 SRC 		= 	$(addprefix $(SRC_DIR)/, $(SRC_SRC))
 				
