--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: aboumall <aboumall42@gmail.com>            +#+  +:+       +#+         #
+#    By: aboumall <aboumall@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/25 16:29:40 by aboumall          #+#    #+#              #
-#    Updated: 2025/06/29 21:17:07 by aboumall         ###   ########.fr        #
+#    Updated: 2025/09/04 12:53:20 by aboumall         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ HEAD 	= includes/philo_bonus.h
 
 CC 		= cc
 
-CFLAGS 	= -Werror -Wextra -Wall -Iincludes -std=gnu11 -g
+CFLAGS 	= -Werror -Wextra -Wall -Iincludes -std=gnu11 -g3
 
 SRC_DIR 	= 	src
 OBJ_DIR 	= 	obj
